force-app/main/default/objects/ssot__LoyaltyTier__dlm/fields/ssot__LoyaltyTierGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyTierGroupId__c</fullName>
    <label>Loyalty Tier Group</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyTierGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>