force-app/main/default/objects/ssot__LoyaltyTier__dlm/fields/ssot__rel_1697761184897_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761184897_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyTierGroup_Id_map_LoyaltyTier__rel</label>
    <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
    <relationshipLabel>LoyaltyTierGroup_Id_map_LoyaltyTier__rel</relationshipLabel>
    <relationshipName>rel_1697761184897_end</relationshipName>
    <type>Lookup</type>
</CustomField>