force-app/main/default/objects/ssot__LoyaltyTier__dlm/fields/ssot__SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SequenceNumber__c</fullName>
    <label>Sequence Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SequenceNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>